[gd_scene load_steps=4 format=3 uid="uid://d4curgelvbncc"]

[ext_resource type="Script" path="res://src/SlotItemController.gd" id="1_065ci"]
[ext_resource type="Texture2D" uid="uid://csgte1465tn2v" path="res://assets/crosshair026.png" id="2_5n8uk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14kd4"]
size = Vector2(56, 56)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_065ci")

[node name="Image" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_5n8uk")

[node name="Label" type="Label" parent="."]
offset_left = -21.0
offset_top = -21.0
offset_right = 21.0
offset_bottom = 21.0
text = "0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SlotArea" type="Area2D" parent="."]
scale = Vector2(0.75, 0.75)
disable_mode = 1
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlotArea"]
z_index = 1
y_sort_enabled = true
shape = SubResource("RectangleShape2D_14kd4")

[node name="BuildSlot" type="Node2D" parent="."]

[connection signal="input_event" from="SlotArea" to="." method="_on_slot_area_input_event"]
[connection signal="mouse_entered" from="SlotArea" to="." method="_on_slot_area_mouse_entered"]
[connection signal="mouse_exited" from="SlotArea" to="." method="_on_slot_area_mouse_exited"]
